<resources>
    <string name="app_name">W24_3175_G12_One-ClickEat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_disccover">Discover the Shop!</string>
    <string name="hello_blank_fragment_favorite">Hello blank fragment Favorite</string>
    <string name="hello_blank_fragment_cart">Cart</string>
    <string name="hello_blank_fragment_user">Hello blank fragment User</string>
    <string name="txWelcome">Welcome to One Click Eat</string>
    <string name="btLogin">Login</string>
    <string name="btRegister">Register</string>
    <string name="txtDescription">This is the One Click Eat App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txLoginDesc">Sign in</string>
    <string name="emailHint">aaa@gmail.com</string>
    <string name="hintPassword">Password</string>
    <string name="noPasswordTxt">Don\'t have password?</string>
    <string name="txtSignUp">Sign up here!</string>
    <string name="Register">Register</string>
    <string name="RegisterEmailHint">Email</string>
    <string name="RegisterPwd">Password</string>
    <string name="ftxtEmail">"User Email: "</string>
    <string name="lastName">Last Name</string>
    <string name="hintFirstName">First Name</string>
    <string name="ShopName">Shop Name</string>
    <string name="txtViewRestaurantName">Restaurant Name</string>
    <string name="txtViewItemName">Item Name</string>
    <string name="txtViewItemTotal">Item Total</string>
    <string name="txtViewItemPriceSample">$8.49</string>
    <string name="txtViewItemRemove">Remove</string>
    <string name="txtQuantityText">Quantity:</string>
    <string name="quantityDisplay">1</string>
    <string name="txtViewCartTotal">Total Price:</string>
    <string name="txtViewFinalPrice">$ 0.00</string>
    <string name="btnCheckOutValue">Make Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtViewGonnaPay">Going to pay: $0.00</string>
    <string name="imgViewHeart">Heart Icon</string>
    <string name="txtViewFavTitle">Favorite Shop</string>
    <string name="removeBtn">Remove</string>
    <string name="Checkout">Successfully Checkout!</string>
    <string name="my_map_api_key">AIzaSyAx7nx1mLVzazJ41OHari8derhQzZDUU6M</string>

</resources>
