<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CartItemApder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewItemName"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/txtViewItemName"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/txtViewItemTotal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtViewItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txtViewItemPriceSample"
            android:textAlignment="textEnd"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TxtViewCartItemRemove"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/txtViewItemRemove"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/txtQuantityText"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextQuantityNum"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/quantityDisplay"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>